# eark-validator-core

./: .gitignore  MANIFEST.in  README.md  __init__.py  mypackage.toml  setup.cfg
.github/workflows/: python-package-version-test.yml  python-testpypi-publish.yml
eark_validator/: __init__.py  utils.py
eark_validator/cli/: __init__.py  app.py
eark_validator/infopacks/: information_package.py  mets.py  rules.py  struct_errors.py
