[metadata]
name = eark_validator_core
version = 0.1
description = E-ARK Python Information Package validation library.
author = Darren Dignam
author_email = darren@openpreservation.org
url = https://github.com/opf-labs/eark-validator-core

[options]
include_package_data = True
packages = find:
install_requires =
    lxml
    importlib_resources
    click
    dicttoxml

[options.entry_points]
console_scripts =
    ip_validate = eark_validator.cli.app:cli
