[metadata]
name = eark_validator_core
version = 0.1.1
description = E-ARK Python Information Package validation library.
author = Darren Dignam
author_email = darren@openpreservation.org
url = https://github.com/opf-labs/eark-validator-core

[options]
include_package_data = True
packages = find:
install_requires =
    lxml==4.9.3
    importlib_resources
    click==8.1.7
    dicttoxml==1.7.16

[options.entry_points]
console_scripts =
    ip_validate = eark_validator.cli.app:cli
